# ML_AI25

./: README.md  app.py  pyproject.toml  requirements.txt
model/: car_prediction_model.pkl  features.pkl  prediction_car_demo_test.csv  prediction_car_demo_train.csv
