[project]
name = "ML_AI25"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Денис Мовсумов", email = "damovsumov@edu.hse.ru"},
]
dependencies = ["streamlit>=1.52.1", "seaborn>=0.13.2", "matplotlib>=3.10.7", "numpy>=2.3.5", "plotly>=6.5.0", "statsmodels>=0.14.6", "scikit-learn>=1.7.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
