[project]
name = "ML_AI25"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Денис Мовсумов", email = "damovsumov@edu.hse.ru"},
]
dependencies = [
    "streamlit>=1.52.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "plotly>=6.5.0",
    "statsmodels>=0.14.1",
    "scikit-learn>=1.3.2",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0"
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false